# application-services

./: .buildconfig-android.yml  CHANGELOG.md  Cargo.toml  build.gradle
components/fxa-client/android/: build.gradle
components/fxa-client/android/src/main/java/mozilla/appservices/fxaclient/: FirefoxAccount.kt
components/fxa-client/android/src/main/java/mozilla/appservices/fxaclient/rust/: LibFxAFFI.kt
components/fxa-client/ffi/: Cargo.toml
components/fxa-client/ffi/src/: lib.rs
components/fxa-client/src/: browser_id.rs  errors.rs  lib.rs  profile.rs  scoped_keys.rs
components/fxa-client/src/http_client/: browser_id.rs
components/logins/android/: build.gradle
components/places/: Cargo.toml
components/places/android/: build.gradle
components/places/ffi/: Cargo.toml
components/push/android/: build.gradle
components/push/ffi/: Cargo.toml
components/rc_log/android/: build.gradle
components/viaduct/android/: build.gradle
megazords/fenix/android/: build.gradle
megazords/lockbox/android/: build.gradle
megazords/reference-browser/android/: build.gradle
