[workspace]
members = [
    "components/fxa-client",
    "components/fxa-client/ffi",
    "components/logins",
    "components/logins/ffi",
    "components/places",
    "components/push",
    "components/push/ffi",
    "components/places/ffi",
    "components/support/cli",
    "components/support/sql",
    "components/support/ffi",
    "components/support/force-viaduct-reqwest",
    "components/support/interrupt",
    "components/support/rc_crypto",
    "components/viaduct",
    "components/sync15",
    "components/rc_log",
    "megazords/fenix",
    "megazords/lockbox",
    "megazords/reference-browser",
    "megazords/ios/rust",
    "testing/sync-test",
]

[profile.release]
opt-level = "s"
debug = true
lto = true

# Until https://github.com/jgallagher/rusqlite/pull/511 lands and is in a release.
[patch.crates-io.rusqlite]
git = "https://github.com/thomcc/rusqlite"
# XXX: This inexplicably fails on taskcluster (and only on taskcluster),
#      so we specify the revision instead...
# branch = "no-sqlcipher-bundled-panic"
rev = "fe80b51e89b105b826e11fd6466bc4c527f26bf8"